k8s/tuto-bdd-deploy.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2020-05-07T16:01:41Z"
  generation: 1
  labels:
    app: tuto-bdd
  name: tuto-bdd
  namespace: nicolas
  resourceVersion: "335149"
  selfLink: /apis/extensions/v1beta1/namespaces/nicolas/deployments/tuto-bdd
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: tuto-bdd
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: tuto-bdd
    spec:
      containers:
      - image: nicodeur/k8s-bdd:latest
        imagePullPolicy: Always
        name: k8s-bdd
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  conditions:
  - lastTransitionTime: "2020-05-07T16:01:42Z"
    lastUpdateTime: "2020-05-07T16:01:55Z"
    message: ReplicaSet "tuto-bdd-5b6dd8f7bd" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2020-05-07T16:01:56Z"
    lastUpdateTime: "2020-05-07T16:01:56Z"
    message: Deployment does not have minimum availability.
    reason: MinimumReplicasUnavailable
    status: "False"
    type: Available
  observedGeneration: 1
  replicas: 1
  unavailableReplicas: 1
  updatedReplicas: 1
